# metnum-tp2

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  crossval.cpp
exp/: accuracy.m  count.m  crossval.m  f1.m  precision.m  recall.m  results.m
exp/data augmentation/: datadist.m  datarot.m  distortion.m
exp/results/: results10k5ktrainAlpha10.csv  results10k5ktrainAlpha25.csv  results10k5ktrainAlpha30.csv
exp/results/alpha/: results10k5ktrainAlpha100.csv  results10k5ktrainAlpha15.csv  results10k5ktrainAlpha150.csv  results10k5ktrainAlpha20.csv  results10k5ktrainAlpha40.csv  results10k5ktrainAlpha5.csv  results10k5ktrainAlpha50.csv  results10k5ktrainAlpha60.csv  results10k5ktrainAlpha80.csv
exp/results/k/: results10k10ktrainAlpha15.csv  results10k10ktrainAlpha30.csv  results10k15ktrainAlpha15.csv  results10k15ktrainAlpha30.csv  results10k1ktrainAlpha15.csv  results10k1ktrainAlpha30.csv  results10k20ktrainAlpha15.csv  results10k20ktrainAlpha30.csv  results10k2ktrainAlpha15.csv  results10k2ktrainAlpha30.csv  results10k30ktrainAlpha15.csv  results10k30ktrainAlpha30.csv  results10k3ktrainAlpha15.csv  results10k3ktrainAlpha30.csv  results10k4ktrainAlpha15.csv  results10k4ktrainAlpha30.csv  results10k5ktrainAlpha15.csv  results10k5ktrainAlpha30.csv  results10k7ktrainAlpha15.csv  results10k7ktrainAlpha30.csv  results10k8ktrainAlpha15.csv  results10k8ktrainAlpha30.csv  results10k9ktrainAlpha15.csv  results10k9ktrainAlpha30.csv
informe/: Untitled.ipynb  apendice.tex  conclusion.tex  desarrollo.tex  experimentacion.tex  informe.bcf  informe.run.xml  informe.tex  intro.tex  resultados.tex
informe/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: Methods.cpp  Methods.h  SortedKList.h  Vectors.h  knn.cpp  knn.h  main.cpp  parameters.cpp  parameters.h  pca.cpp  pca.h  power.cpp  power.h
src/benchmark/: benchmark.h
src/io/: IO.cpp  IO.h  MatrixIterator.h  TrainSetIterator.h
src/machines/: KnnMachine.h  KnnPcaMachine.h  Machine.h  MachineFactory.cpp  MachineFactory.h
src/matrix/: BaseMatrix.cpp  BaseMatrix.h  FullMatrix.h  Matrix.cpp  Matrix.h  SparseMatrix.h  SymmetricMatrix.h  matrix.cpp  matrix.h
src/pipeline/: KnnPipeline.h  Pipeline.h  PipelineFactory.cpp  PipelineFactory.h
test/: CMakeLists.txt  CMakeLists.txt.in  MatrixTest.cpp  MethodTest.cpp  knnTest.cpp  pcaTest.cpp
